--- a/GomSpaceInterview/GomSpaceInterview.csproj
+++ b/GomSpaceInterview/GomSpaceInterview.csproj
@@ -7,6 +7,7 @@
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <DocumentationFile>bin\Debug\netcoreapp2.2\GomSpaceInterview.xml</DocumentationFile>
+	  <NoWarn>$(NoWarn);1591</NoWarn>
     <OutputPath>bin\Debug\</OutputPath>
   </PropertyGroup>
 
